--- a/CourseraWeek5/CourseraWeek5.csproj
+++ b/CourseraWeek5/CourseraWeek5.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditDistance.cs" />
     <Compile Include="MonyChangeDP.cs" />
+    <Compile Include="PremitiveCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
